# pytest-result-sender

./: .flake8  .gitignore  README.md  aa.py  msg.md  pyproject.toml
src/pytest_result_sender/: plugin.py
tests/: test_abc.py
