[project]
name = "pytest-result-sender"
version = "0.1.0"
description = ""
authors = [
    {name = "chengzhitong", email = "1226645561@qq.com"},
]
dependencies = [
    "pytest>=7.4.3",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.entry-points.pytest11]
result_log = "pytest_result_sender.plugin"

[tool.pdm.build]
package-dir = "src"

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
]
[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
exclude = '''
/(
      \.git
    | \.hg
    | \.tox
    | venv
    | buck-out
    | build
    | dist
)/
'''

[tool.pdm.scripts]
check = {composite = [
    "isort .",
    "black .",
    "flake8 .",
]}

test = "pytest"